k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsite
  namespace: personal-site-dev
spec:
  selector:
    app: devsite
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 5002
