k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsite
  namespace: personal-site-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: public
  tls:
  - hosts:
    - dev.blakeridgway.com
    secretName: devsite-tls
  rules:
    - host: dev.blakeridgway.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsite
                port:
                  number: 8080
